--- a/privacy.html
+++ b/privacy.html
@@ -155,6 +155,6 @@
 <p>By email: strideminduser@gmail.com</p>
 </li>
 <li>
-<p>By visiting this page on our website: <a href="https://abisoyeonanuga.github.io/stride-mind/privacy.html" rel="external nofollow noopener" target="_blank">https://abisoyeonanuga.github.io/stride-mind/privacy.html</a></p>
+<p>By visiting this page on our website: <a href="https://abisoyeonanuga.github.io/stride-mind/privacy.html" rel="external nofollow noopener" target="_blank">privacy-policy</a></p>
 </li>
 </ul>
